# Pangaea

./: .gitattributes  .gitignore  LICENSE  README.md  athena_environment.yaml  build.sh  build_db.sh  clustering.py  environment.yaml  feature.py  pangaea.py  utils.py
cpptools/: Makefile  add_barcode.cpp  count_kmer  count_kmer.cpp  count_tnf  count_tnf.cpp  extract_reads.cpp  extract_unmapped  extract_unmapped.cpp  util.cpp
cpptools/include/: util.h
cpptools/include/ThreadPool/: ThreadPool.h
cpptools/lib/: libbz2.so.1.0  libhts.so.3
example/: contigs.fa.amb  contigs.fa.ann  contigs.fa.bwt
example/hybrid/: hybrid_wrapper.sh  run_athena.sh
example/hybrid/contigs/: athena.asm.fa  flye-input-contigs.fa
example/linked_reads_example/: athena.asm.fa  contigs.fa  contigs.fa.pac  contigs.fa.sa
example/linked_reads_example/pangaea/: log
example/linked_reads_example/pangaea/3.clustering/: cluster_bin0.barcode  cluster_bin1.barcode  clusters.npz  clusters.tsv  contigs.megahit.fa.bwt
example/linked_reads_example/pangaea/4.assembly/: contigs.megahit.depth  contigs.megahit_cut10.list  contigs.megahit_cut30.high_abd.fa  contigs.megahit_cut30.list
example/pangaea/2.vae/: latent.npz
example/pangaea/3.clustering/: barcodes.npz  cluster_bin2.barcode  cluster_bin3.barcode  cluster_bin4.barcode  contigs.megahit.fa  contigs.megahit.fa.amb  contigs.megahit.fa.ann  contigs.megahit.fa.pac  contigs.megahit.fa.sa
example/pangaea/3.clustering/cluster_bin0.megahit/: log  options.json
example/pangaea/3.clustering/cluster_bin1.megahit/: final.contigs.fa
example/pangaea/3.clustering/cluster_bin2.megahit/: log  options.json
example/pangaea/3.clustering/cluster_bin3.megahit/: log  options.json
example/pangaea/3.clustering/cluster_bin4.megahit/: options.json
example/pangaea/4.assembly/: contigs.low_abd.binning.local.fa.fai  contigs.megahit_cut10.high_abd.fa  contigs.megahit_cut50.high_abd.fa  contigs.megahit_cut70.list
example/pangaea/4.assembly/contigs.low_abd.binning.local.asm/: align-inputs.bam.bai  seed-contigs.fa
example/pangaea/4.assembly/contigs.megahit_cut10.low_abd.spades/: contigs.paths  run_spades.sh  run_spades.yaml
example/pangaea/4.assembly/contigs.megahit_cut30.low_abd.spades/: assembly_graph.fastg  before_rr.fasta  contigs.paths  input_dataset.yaml  scaffolds.fasta
example/pangaea/4.assembly/contigs.megahit_cut70.low_abd.spades/: dataset.info  input_dataset.yaml  run_spades.yaml  strain_graph.gfa
models/: VAENET.py
src/: clustering.py  data.py  feature.py  pangaea.py  run_pangaea  utils.py
src/cpptools/: CMakeCache.txt  CMakeLists.txt  Makefile  assign_barcodes.cpp  cmake_install.cmake  count_kmer.cpp  count_tnf.cpp  extract_unmapped.cpp  parse_header.cpp  preprocess_stlfr.cpp  preprocess_tellseq.cpp
src/cpptools/lib/gzstream/: CMakeLists.txt  Makefile  cmake_install.cmake
src/hybrid/: final_merge.sh  hybrid_wrapper.sh  run_athena.sh  run_operams.sh
src/models/: VAENET.py
src/scripts/: bin_assembly.sh  calculate_diversity.R  calculate_diversity.sh  low_abd_reads.sh  merge_asm.sh  merge_olc.py
third_parties/Lathe/: Snakefile
third_parties/Lathe/scripts/: spancircle.py
third_parties/jellyfish-2.3.0/: Makefile  Makefile.in  compat.sh  config.h  config.status  libjellyfish-2.0.la  libtool
third_parties/jellyfish-2.3.0/.libs/: libjellyfish-2.0.lai
third_parties/jellyfish-2.3.0/lib/: allocators_mmap.lo  generator_manager.lo  int128.lo  jsoncpp.lo  mer_dna.lo  misc.lo  rectangular_binary_matrix.lo  storage.lo  thread_exec.lo  time.lo
third_parties/jellyfish_pkg/lib/: libjellyfish-2.0.so.2.0.0
third_parties/rph_kmeans/: MANIFEST.in  Makefile  README.md  requirements.txt  setup.py
third_parties/rph_kmeans/examples/: simulate.py
third_parties/rph_kmeans/rph_kmeans/: __init__.py  _point_reducer_cy.by_cython.cpp  _point_reducer_cy.pyx  _point_reducer_cy_lib.cpp  _point_reducer_cy_lib.h  point_reducer_base.py  point_reducer_cy.py  utils.py
third_parties/rph_kmeans/rph_kmeans.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+321 files in other folders)
